--- a/package.json
+++ b/package.json
@@ -1,77 +1,40 @@
 {
-  "name": "open-micro-saas",
+  "name": "nordkurve",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write --ignore-path .gitignore .",
-    "prepare": "husky install",
-    "test": "playwright test --max-failures=1",
-    "test:ui": "playwright test --ui",
-    "test:db:start": "docker-compose -f docker-compose.test.yml up -d",
-    "test:db:prepare": "dotenv -e .env.test prisma migrate deploy",
-    "test:db:migrate": "dotenv -e .env.test prisma migrate dev",
-    "db:start": "docker-compose up -d",
-    "db:migrate:dev": "prisma migrate dev",
-    "prisma:generate": "prisma generate",
-    "prisma:seed": "prisma db seed",
-    "script:create:admin": "dotenv tsx ./scripts/create-admin-user-script.ts"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seeds/seed.ts"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.12",
-    "@next/third-parties": "^14.1.0",
-    "@prisma/client": "^5.7.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "@stripe/stripe-js": "^2.4.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.1.3",
+    "@prisma/client": "^5.8.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "crisp-sdk-web": "^1.0.21",
-    "form-data": "^4.0.0",
-    "lucide-react": "^0.334.0",
-    "mailgun.js": "^10.0.0",
-    "micro": "^10.0.1",
-    "next": "14.0.4",
-    "next-auth": "^4.24.5",
-    "nodemailer": "^6.9.8",
+    "lucide-react": "^0.314.0",
+    "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "resend": "^3.1.0",
-    "sharp": "^0.33.2",
     "stripe": "^14.13.0",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "cheerio": "^1.0.0-rc.12",
-    "daisyui": "^4.6.0",
-    "dotenv-cli": "^7.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-filenames-simple": "^0.9.0",
-    "husky": "^8.0.3",
     "postcss": "^8",
-    "prettier": "^3.1.1",
-    "prisma": "^5.7.1",
-    "smtp-tester": "^2.1.0",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.7.0",
     "typescript": "^5"
   }
 }
