--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "nordkurve",
+  "name": "marshal-saas",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -19,7 +20,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.314.0",
+    "micro": "^10.0.1",
     "next": "14.1.0",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -32,6 +35,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
