--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.5",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.3",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -19,6 +20,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "express": "^4.18.3",
     "lucide-react": "^0.314.0",
     "micro": "^10.0.1",
     "next": "14.1.0",
@@ -28,7 +30,9 @@
     "react-dom": "^18",
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vapid": "^0.7.4",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "^20",
