--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "nordkurve",
+  "name": "marshal-saas",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.5",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.3",
-    "@playwright/test": "^1.43.0",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -19,21 +20,28 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "express": "^4.18.3",
     "lucide-react": "^0.314.0",
+    "micro": "^10.0.1",
     "next": "14.1.0",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vapid": "^0.7.4",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
