🍚🚲 ↝  [ N12-4 N12-3 ]: adding fanklub shop section

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "KU",
-  "short_name": "Keepup",
+  "name": "Nordkurve",
+  "short_name": "nk12",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#FFFFFF",
