--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@ducanh2912/next-pwa": "^10.2.5",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
     "@next/font": "^14.2.3",
     "@prisma/client": "^5.8.1",
@@ -23,9 +26,11 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "bootstrap": "^5.3.3",
+    "chakra-react-select": "^4.7.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "express": "^4.18.3",
+    "framer-motion": "^11.2.10",
     "lucide-react": "^0.314.0",
     "micro": "^10.0.1",
     "next": "14.1.0",
@@ -35,6 +40,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
