--- a/package.json
+++ b/package.json
@@ -6,41 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
     "@ducanh2912/next-pwa": "^10.2.5",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
-    "@next/font": "^14.2.3",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/auth-helpers-react": "0.3.1",
     "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.43.4",
-    "bootstrap": "^5.3.3",
-    "chakra-react-select": "^4.7.6",
+    "@supabase/supabase-js": "^2.42.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "express": "^4.18.3",
-    "framer-motion": "^11.2.10",
     "lucide-react": "^0.314.0",
     "micro": "^10.0.1",
     "next": "14.1.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-toastify": "^10.0.5",
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -52,6 +43,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
