--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@ducanh2912/next-pwa": "^10.2.5",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -21,9 +24,13 @@
     "@supabase/auth-helpers-react": "0.3.1",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.4",
+    "chakra-react-select": "^4.7.6",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "express": "^4.18.3",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.2.10",
     "lucide-react": "^0.314.0",
     "micro": "^10.0.1",
     "next": "14.1.0",
@@ -32,6 +39,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
+    "react-toastify": "^10.0.5",
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
